Presentation: added pauze to atomic

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -359,8 +359,8 @@ A does not include the full block.
 \frametitle{Atomic operations on the chain}
     \begin{itemize}
         \item A chain is immutable and can only be appended to.
-        \item Only atomic operations are allowed on the chain. This prevents branches.
-        \item A peer drops any incoming requests during outstanding request. This is a Drop Event.
+        \pauze \item Only atomic operations are allowed on the chain. This prevents branches.
+        \pauze \item A peer drops any incoming requests during outstanding request. This is a Drop Event.
     \end{itemize}
 \end{frame}
 \note{
